--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -1,17 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600&family=Varela&family=Varela+Round&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-
+    img{
+        @apply inline
+    }
+    textarea{
+        resize: auto
+    }
 }
 
 @layer components {
+    /*------------------------------------ Flex Classes ------------------------------------ */
+        .flex-center{
+            @apply flex justify-center items-center
+        }
+        .flex-col-center{
+            @apply flex justify-center items-center flex-col
+        }
+        .flex-between{
+            @apply flex justify-between items-center
+        }
+        .flex-col-between{
+            @apply flex justify-between items-center flex-col
+        }
+        .flex-around{
+            @apply flex justify-between items-center
+        }
+        .flex-col-around{
+            @apply flex justify-around items-center flex-col
+        }
+        .flex-evenly{
+            @apply flex justify-evenly items-center
+        }
+        .flex-col-evenly{
+            @apply flex justify-evenly items-center flex-col
+        }
 
+        .div-center{
+            @apply w-screen h-screen flex justify-center items-center
+        }
+    /*------------------------------------ Flex Classes ------------------------------------ */
+
+    
+    /*------------------------------------ Styling Classes ------------------------------------ */
+        .icon-styling{
+            @apply text-2xl mx-2.5 cursor-pointer
+        }.icon-styling-container > i{
+            @apply text-3xl mx-2.5 cursor-pointer
+        }
+
+        .icon-styling-sm{
+            @apply text-xl mx-2.5 cursor-pointer
+        }.icon-styling-container-sm > i{
+            @apply text-xl mx-2.5 cursor-pointer
+        }
+
+        .list-styling{
+            @apply flex text-xl cursor-pointer
+        }.list-styling > li{
+            @apply mx-2.5
+        }
+
+        .list-styling-around{
+            @apply flex-around text-lg cursor-pointer w-[80%] font-josefin
+        }.list-styling > li{
+            @apply mx-2.5
+        }
+
+
+    /*------------------------------------ Styling Classes ------------------------------------ */
 }
 
 @layer utilities {
-
+    
 }
